@@ -32,6 +32,8 @@ ChangeLog (IOMETER2 - 2004.mm.mm):
      (bundles the changes contributed by Lamont Cranston - it introduces
      the new IOManagerWin.cpp file).
 - Cleanup:
+   - Added a check for null pointers in case a Manager could not be
+     added to his list in Galileo[App|Globals].cpp
    - Corrected the macro definition for BLKGETSIZE64 in IOCommon.h
 - Documentation:
    - Added the initial drop of the DocBook sources of the first part of
